# s3d

./: .gitignore  CMakeLists.txt  README
base/: CMakeLists.txt
base/anim/: CMakeLists.txt  anim.c  arg.c  time.c
base/clip/: CMakeLists.txt  clip.c  clip.h  cull.c  twopass.c
base/color/: CMakeLists.txt  color.h  conv.c  index.c  rgbhsv.c
base/csg/: CMakeLists.txt  csg.h  csg.tab.h  csg.y  csgy.h  lang.c  lex.l  ops.c
base/gener/: CMakeLists.txt  affine.c  gener.h  rotsurf.c
base/geom/: CMakeLists.txt  inode.c  matrix.c  ray.c  ray.h  vector.c
base/gp/: CMakeLists.txt  dv.c  font.c  font.h  gp.c  gp.h
base/gutil/: CMakeLists.txt  cb.c  md.c  mv.c  mv.h  mvcb.c
base/hier/: CMakeLists.txt  hier.c  stack.c
base/image/: CMakeLists.txt  image.c
base/image/ppm/: libpm.c  libppm.c  mallocvar.h  pm_config.h  ppm.h
base/image/raster/: Makefile  image.c  image.h  rasterfile.h  sunras.c
base/lang/: CMakeLists.txt  lang.h  lex.c  node.c  parser.y  pv.c  pvl.c  symbol.c  symbol.h  y.tab.c  y.tab.h
base/laux/: CMakeLists.txt  error.c  io.c  laux.h  list.c  list.h  mem.c
base/map/: CMakeLists.txt  funcs.c  image.c  lang.c  light.c  map.c  material.c  shade.c
base/plot/: CMakeLists.txt  ortho.c  ortho.h  plot.c  plot.h
base/poly/: CMakeLists.txt  hpoly.c  hpoly.h  poly.c  poly.h
base/prim/: CMakeLists.txt  prim.c  sphere.c  sphere.h
base/rad/: CMakeLists.txt  radiosity.c  radiosity.h
base/raster/: CMakeLists.txt  scan_obj.c  scan_obj.h  scan_space.c  subdiv_obj.c  subdiv_space.c
base/ray/: CMakeLists.txt  rshade.c  rshade.h
base/scene/: CMakeLists.txt  obj.c  scene.c
base/shade/: CMakeLists.txt  illum.c  lang.c  light.c  material.c  misc.c  shade.c
base/view/: CMakeLists.txt  def.c  lang.c  set.c
base/visib/: CMakeLists.txt  rt.c  rtcsg.c  zbuf.c  zsort.c
demo/: d0.sh  d1.sh  d2.sh  d3.sh  d4.sh  d5.sh  d6.sh  d7.sh  run-all
model/: curve.pts  model.csg
pic/: amber.ppm  chrmap.ppm  envmap.ppm  len_std.ppm  mandrill.ppm  pits.ppm
proj/: CMakeLists.txt
proj/anim/: CMakeLists.txt  Makefile.linux  Makefile.macos  Makefile.mingw  main.c  main.h
proj/csg/: CMakeLists.txt  Makefile.linux  Makefile.macos  Makefile.mingw  main.c
proj/map/: CMakeLists.txt  Makefile.macos  Makefile.mingw  main.c  main.h
proj/ortho/: CMakeLists.txt  Makefile.linux  Makefile.macos  Makefile.mingw  main.c  main.h
proj/ple/: CMakeLists.txt  Makefile.linux  Makefile.macos  Makefile.mingw  main.c
proj/rad/: CMakeLists.txt  Makefile.macos  Makefile.mingw  cheq.c  cube.c  main.c  main.h  mesh.c
proj/ray/: CMakeLists.txt  Makefile.linux  Makefile.mingw  main.c  main.h
proj/rmap/: CMakeLists.txt  Makefile.linux  Makefile.mingw  main.c  main.h
proj/rsurf/: CMakeLists.txt  Makefile.macos  Makefile.mingw  main.c
proj/rt/: CMakeLists.txt  Makefile.linux  Makefile.mingw  main.c  main.h
proj/splot/: CMakeLists.txt  Makefile.linux  Makefile.macos  Makefile.mingw  main.c  main.h
proj/tk/: CMakeLists.txt  Makefile.linux  Makefile.macos  Makefile.mingw  main.c  tk.c  tk.h
proj/vw/: CMakeLists.txt  Makefile.linux  Makefile.macos  Makefile.mingw  main-vw.c  main.c  tst.c
proj/zflat/: CMakeLists.txt  Makefile.linux  Makefile.mingw  main.c  main.h
proj/zmap/: CMakeLists.txt  Makefile.macos  Makefile.mingw  main.c  main.h
proj/zsort/: CMakeLists.txt  Makefile.linux  Makefile.mingw  main.c  main.h
scn/: arm.scn  ball.scn  bump.scn  csg.scn  cyl.scn  env.scn  hier.scn  imap.scn  imclamp.scn  rad.scn  slide.scn  (+5 more)
(+5 files in other folders)
