
add_subdirectory(laux) 
add_subdirectory(gp) 
add_subdirectory(gutil) 
add_subdirectory(geom) 
add_subdirectory(color) 
add_subdirectory(image) 
add_subdirectory(lang) 
add_subdirectory(poly) 
add_subdirectory(prim) 
add_subdirectory(csg) 
add_subdirectory(gener) 
add_subdirectory(view) 
add_subdirectory(clip) 
add_subdirectory(raster) 
add_subdirectory(shade) 
add_subdirectory(scene) 
add_subdirectory(hier) 
add_subdirectory(visib)
add_subdirectory(ray) 
add_subdirectory(rad) 
add_subdirectory(map) 
add_subdirectory(plot) 
add_subdirectory(anim)

