
BISON_TARGET(CSG_PARSER csg.y ${CMAKE_CURRENT_BINARY_DIR}/csg.c COMPILE_FLAGS "--defines=csg.tab.h -p csg")

FLEX_TARGET(CSG_SCANNER lex.l  ${CMAKE_CURRENT_BINARY_DIR}/lex.c COMPILE_FLAGS " -Pcsg")

ADD_FLEX_BISON_DEPENDENCY(CSG_SCANNER CSG_PARSER)

message("CSG ${BISON_CSG_PARSER_OUTPUTS}  ")

add_library( csg  STATIC  ${BISON_CSG_PARSER_OUTPUTS} ${FLEX_CSG_SCANNER_OUTPUTS} lang.c  ops.c)

install(FILES csg.h  DESTINATION ${INCL_DIR})

install(TARGETS csg  DESTINATION ${LIB_DIR})
